--- a/shopping-cart-app/src/app/modules/auth/pages/login/login.component.html
+++ b/shopping-cart-app/src/app/modules/auth/pages/login/login.component.html
@@ -1,1 +1,47 @@
-<p>login works!</p>
+<div class="form-wrapper">
+    <div class="form-container">
+      <h3 class="text-center">Login</h3>
+      <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+        <div class="mb-3">
+          <label for="email" class="form-label">Email</label>
+          <input
+            type="email"
+            class="form-control"
+            [ngClass]="{ 'is-invalid': submitted && email.errors }"
+            id="email"
+            formControlName="email"
+            placeholder="Type your email"
+          />
+          <small
+            *ngIf="email.invalid && (email.dirty || email.touched)"
+            class="invalid-feedback"
+          >
+            <div *ngIf="email.errors?.['required']">Email is required</div>
+            <div *ngIf="email.errors?.['email']">Email should be valid</div>
+          </small>
+        </div>
+        <div class="mb-3">
+          <label for="password" class="form-label">Password</label>
+          <input
+            type="password"
+            class="form-control"
+            [ngClass]="{ 'is-invalid': submitted && email.errors }"
+            formControlName="password"
+            id="password"
+            placeholder="Type your password"
+          />
+          <small
+            *ngIf="password.invalid && (password.dirty || password.touched)"
+            class="invalid-feedback"
+          >
+            <div *ngIf="password.errors?.['required']">Password is required</div>
+          </small>
+        </div>
+        <button type="submit" class="btn btn-primary w-100">Sign In</button>
+        <p class="form-text mt-3 text-center">
+          Not a member? <a routerLink="/auth/register">Register</a>
+        </p>
+      </form>
+    </div>
+  </div>
+  
