--- a/shopping-cart-app/src/app/modules/auth/pages/login/login.component.html
+++ b/shopping-cart-app/src/app/modules/auth/pages/login/login.component.html
@@ -3,21 +3,21 @@
       <h3 class="text-center">Login</h3>
       <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
         <div class="mb-3">
-          <label for="email" class="form-label">Email</label>
+          <label for="username" class="form-label">User Name</label>
           <input
-            type="email"
+            type="text"
             class="form-control"
-            [ngClass]="{ 'is-invalid': submitted && f['email'].errors }"
-            id="email"
-            formControlName="email"
-            placeholder="Type your email"
+            [ngClass]="{ 'is-invalid': submitted && f['username'].errors }"
+            id="username"
+            formControlName="username"
+            placeholder="Type your user name"
           />
           <small
-            *ngIf="f['email'].invalid && (f['email'].dirty || f['email'].touched)"
+            *ngIf="f['username'].invalid && (f['username'].dirty || f['username'].touched)"
             class="invalid-feedback"
           >
-            <div *ngIf="f['email'].errors?.['required']">Email is required</div>
-            <div *ngIf="f['email'].errors?.['email']">Email should be valid</div>
+            <div *ngIf="f['username'].errors?.['required']">Username is required</div>
+            <!-- <div *ngIf="f['email'].errors?.['email']">Email should be valid</div> -->
           </small>
         </div>
         <div class="mb-3">
@@ -25,7 +25,7 @@
           <input
             type="password"
             class="form-control"
-            [ngClass]="{ 'is-invalid': submitted && f['email'].errors }"
+            [ngClass]="{ 'is-invalid': submitted && f['password'].errors }"
             formControlName="password"
             id="password"
             placeholder="Type your password"
