--- a/shopping-cart-app/src/app/modules/dashboard/pages/dashboard/dashboard.component.html
+++ b/shopping-cart-app/src/app/modules/dashboard/pages/dashboard/dashboard.component.html
@@ -1,1 +1,3 @@
-<p>dashboard works!</p>
+<div class=" d-flex justify-content-center my-5">
+    <button class="btn btn-primary"  (click)="logOut()">Log out</button>
+</div>
