--- a/shopping-cart-app/src/app/modules/auth/pages/login/login.component.html
+++ b/shopping-cart-app/src/app/modules/auth/pages/login/login.component.html
@@ -37,6 +37,19 @@
             <div *ngIf="f['password'].errors?.['required']">Password is required</div>
           </small>
         </div>
+        <div class="row mb-3">
+            <div class="col-md-6 d-flex justify-content-center">
+              <div class="form-check mb-3 mb-md-0">
+                <input class="form-check-input" type="checkbox" value="" id="loginCheck" checked />
+                <label class="form-check-label" for="loginCheck"> Remember me </label>
+              </div>
+            </div>
+    
+            <div class="col-md-6 d-flex justify-content-center">
+              <a routerLink="/auth/forgot-password">Forgot password?</a>
+            </div>
+          </div>
+    
         <button type="submit" class="btn btn-primary w-100">Sign In</button>
         <p class="form-text mt-3 text-center">
           Not a member? <a routerLink="/auth/register">Register</a>
