--- a/revalida-shopping-app/src/styles.scss
+++ b/revalida-shopping-app/src/styles.scss
@@ -8,5 +8,8 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: "Source Sans 3", sans-serif;
+    // font-family: "Source Sans 3", sans-serif;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+html, body { height: 100%; }
+// body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
