--- a/revalida-shopping-app/src/app/modules/auth/pages/register/register.component.html
+++ b/revalida-shopping-app/src/app/modules/auth/pages/register/register.component.html
@@ -4,7 +4,7 @@
       <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
         <div class="fullname form-group">
           <div class="mb-3">
-            <label for="firstname" class="form-label">First</label>
+            <label for="firstname" class="form-label">First Name</label>
             <input
               type="text"
               class="form-control"
