--- a/revalida-shopping-app/src/app/modules/dashboard/pages/profile/profile.component.scss
+++ b/revalida-shopping-app/src/app/modules/dashboard/pages/profile/profile.component.scss
@@ -29,6 +29,18 @@ body {
   color: #ff5722;
 }
 
+.side-menu .submenu {
+    // display: none;
+    padding-left: 20px;
+}
+.side-menu .submenu .nav-link {
+    padding-left: 30px;
+}
+
+.side-menu #my-account {
+    cursor: pointer;
+}
+
 .dropdown-container {
   display: none;
   padding-left: 15px;
@@ -46,9 +58,22 @@ form {
     max-width: 700px;
 }
 
+.fullname {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  
+  .fullname > div {
+    width: 100%;
+  }
+  
+  .fullname div:first-child {
+    margin-right: 20px;
+  }
 
 .btn-save {
-  background-color: #ff5722;
+//   background-color: #ff5722;
   border: none;
 }
 
