--- a/revalida-shopping-app/src/app/modules/dashboard/pages/profile/profile.component.html
+++ b/revalida-shopping-app/src/app/modules/dashboard/pages/profile/profile.component.html
@@ -1,159 +1,223 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Profile Page</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <app-navbar></app-navbar>
     <div class="container mt-4">
-        <div class="row">
-            <!-- Side Menu -->
-            <div class="col-md-3">
-                <div class="side-menu">
-                    <div class="text-center mb-4">
-                        <img src="https://via.placeholder.com/50" class="rounded-circle" alt="User Avatar">
-                        <p class="mt-2">John Doe</p>
-                    </div>
-                    <hr>
-                    <ul class="nav nav-pills flex-column mb-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" id="my-account" (click)="toggleSubmenu()">
-                                <i class="bi bi-person-circle"></i>
-                                My Account
-                            </a>
-                            <div class="submenu" *ngIf="isSubMenuVisible">
-                                <a href="#" class="nav-link">Profile</a>
-                                <a href="#" class="nav-link">Banks & Cards</a>
-                                <a href="#" class="nav-link">Addresses</a>
-                                <a href="#" class="nav-link">Change Password</a>
-                                <a href="#" class="nav-link">Privacy Settings</a>
-                                <a href="#" class="nav-link">Notification Settings</a>
-                            </div>
-                        </li>
-                        <li>
-                            <a href="#" class="nav-link">
-                                <i class="bi bi-cart"></i>
-                                My Purchase
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" class="nav-link">
-                                <i class="bi bi-bell"></i>
-                                Notifications
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" class="nav-link">
-                                <i class="bi bi-ticket"></i>
-                                My Vouchers
-                            </a>
-                        </li>
-                    </ul>
-                </div>
+      <div class="row">
+        <!-- Side Menu -->
+        <div class="col-md-3">
+          <div class="side-menu">
+            <div class="text-center mb-4">
+              <img
+                src="https://via.placeholder.com/50"
+                class="rounded-circle"
+                alt="User Avatar"
+              />
+              <p class="mt-2">John Doe</p>
             </div>
+            <hr />
+            <ul class="nav nav-pills flex-column mb-auto">
+              <li class="nav-item">
+                <a class="nav-link" id="my-account" (click)="toggleSubmenu()">
+                  <i class="bi bi-person-circle"></i>
+                  My Account
+                </a>
+                <div class="submenu" *ngIf="isSubMenuVisible">
+                  <a href="#" class="nav-link">Profile</a>
+                  <a href="#" class="nav-link">Banks & Cards</a>
+                  <a href="#" class="nav-link">Addresses</a>
+                  <a href="#" class="nav-link">Change Password</a>
+                  <a href="#" class="nav-link">Privacy Settings</a>
+                  <a href="#" class="nav-link">Notification Settings</a>
+                </div>
+              </li>
+              <li>
+                <a href="#" class="nav-link">
+                  <i class="bi bi-cart"></i>
+                  My Purchase
+                </a>
+              </li>
+              <li>
+                <a href="#" class="nav-link">
+                  <i class="bi bi-bell"></i>
+                  Notifications
+                </a>
+              </li>
+              <li>
+                <a href="#" class="nav-link">
+                  <i class="bi bi-ticket"></i>
+                  My Vouchers
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
 
-            <!-- Profile Form -->
-            <div class="col-md-9">
-                <div class="profile-container">
-                    <h4>My Profile</h4>
-                    <p>Manage and protect your account</p>
-                    <div class="account-form">
-                        <form [formGroup]="profileForm" (ngSubmit)="onSubmit()">
-                            <div class="mb-3">
-                                <label for="username" class="form-label">Username</label>
-                                <input type="text" id="username" formControlName="username" class="form-control" value="johndoe">
-                                <small class="form-text-muted">Username can only be changed once.</small>
-                            </div>
-                            <div class="fullname form-group">
-                                <div class="mb-3">
-                                  <label for="firstname" class="form-label">First Name</label>
-                                  <input
-                                    type="text"
-                                    class="form-control"
-                                    formControlName="first_name"
-                                    id="firstname"
-                                    placeholder="Type your first name"
-                                  />
-                                  <!-- <small *ngIf="f['first_name'].invalid && (f['first_name'].dirty || f['last_name'].touched)" class="invalid-feedback">
+        <!-- Profile Form -->
+        <div class="col-md-9">
+          <div class="profile-container">
+            <h4>My Profile</h4>
+            <p>Manage and protect your account</p>
+            <div class="account-form">
+              <form [formGroup]="profileForm" (ngSubmit)="onSubmit()">
+                <div class="mb-3">
+                  <label for="username" class="form-label">Username</label>
+                  <input
+                    type="text"
+                    id="username"
+                    formControlName="username"
+                    class="form-control"
+                    [ngClass]="{ 'is-invalid': usernameAlreadyTaken && f['username'].touched }"
+                    value="johndoe"
+                  />
+                  <small class="form-text-muted"
+                    >Username can only be changed once.</small
+                  >
+                  <small class="invalid-feedback" *ngIf="usernameAlreadyTaken">
+                    Username already exists
+                  </small>
+                </div>
+                <div class="fullname form-group">
+                  <div class="mb-3">
+                    <label for="firstname" class="form-label">First Name</label>
+                    <input
+                      type="text"
+                      class="form-control"
+                      formControlName="first_name"
+                      id="firstname"
+                      placeholder="Type your first name"
+                    />
+                    <!-- <small *ngIf="f['first_name'].invalid && (f['first_name'].dirty || f['last_name'].touched)" class="invalid-feedback">
                                     <div *ngIf="f['first_name'].errors?.['required']">First name is required</div>
                                   </small> -->
-                                </div>
-                                <div class="mb-3">
-                                  <label for="lastname" class="form-label">Last Name</label>
-                                  <input
-                                    type="text"
-                                    class="form-control"
-                                    formControlName="last_name"
-                                    id="lastname"
-                                    placeholder="Type your last name"
-                                  />
-                                  <!-- <small *ngIf="f['last_name'].invalid && (f['last_name'].dirty || f['last_name'].touched)" class="invalid-feedback">
+                  </div>
+                  <div class="mb-3">
+                    <label for="lastname" class="form-label">Last Name</label>
+                    <input
+                      type="text"
+                      class="form-control"
+                      formControlName="last_name"
+                      id="lastname"
+                      placeholder="Type your last name"
+                    />
+                    <!-- <small *ngIf="f['last_name'].invalid && (f['last_name'].dirty || f['last_name'].touched)" class="invalid-feedback">
                                     <div *ngIf="f['last_name'].errors?.['required']">Last name is required</div>
                                   </small> -->
-                                </div>
-                              </div>
-                            <div class="mb-3">
-                                <label for="email" class="form-label">Email</label>
-                                <input type="email" id="email" formControlName="email" class="form-control" placeholder="john.doe@gmail.com">
-                            </div>
-                            <div class="mb-3">
-                                <label for="phone" class="form-label">Phone Number</label>
-                                <input type="text" id="phone" formControlName="mobile_num" class="form-control" value="********50">
-                                <a href="#" class="form-text">Change</a>
-                            </div>
-                            <div class="mb-3">
-                                <label class="form-label">Gender</label>
-                                <div>
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="gender" id="male" value="male">
-                                        <label class="form-check-label" for="male">Male</label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="gender" id="female" value="female">
-                                        <label class="form-check-label" for="female">Female</label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="gender" id="other" value="other">
-                                        <label class="form-check-label" for="other">Other</label>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="mb-3">
-                                <label for="dob" class="form-label">Date of Birth</label>
-                                <input type="text" id="dob" class="form-control" value="**/10/19**" disabled>
-                                <small class="form-text-muted">You have already done KYC. Changing your birthday is not permitted.</small>
-                            </div>
-                            <button type="submit" class="btn btn-save btn-primary">Save</button>
-                        </form>
-    
-                        <div class="profile-image">
-                            <img src="https://via.placeholder.com/100" alt="Profile Image">
-                            <br>
-                            <button class="btn btn-secondary">Select Image</button>
-                            <small class="form-text-muted d-block mt-2">File size: maximum 1 MB</small>
-                            <small class="form-text-muted">File extension: .JPEG, .PNG</small>
-                        </div>
-                    </div>
+                  </div>
                 </div>
+                <div class="mb-3">
+                  <label for="email" class="form-label">Email</label>
+                  <input
+                    type="email"
+                    id="email"
+                    formControlName="email"
+                    class="form-control"
+                    placeholder="john.doe@gmail.com"
+                  />
+                </div>
+                <div class="mb-3">
+                  <label for="phone" class="form-label">Phone Number</label>
+                  <input
+                    type="text"
+                    id="phone"
+                    formControlName="mobile_num"
+                    class="form-control"
+                    value="********50"
+                  />
+                  <a href="#" class="form-text">Change</a>
+                </div>
+                <div class="mb-3">
+                  <label class="form-label">Gender</label>
+                  <div>
+                    <div class="form-check form-check-inline">
+                      <input
+                        class="form-check-input"
+                        type="radio"
+                        name="gender"
+                        id="male"
+                        value="male"
+                      />
+                      <label class="form-check-label" for="male">Male</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                      <input
+                        class="form-check-input"
+                        type="radio"
+                        name="gender"
+                        id="female"
+                        value="female"
+                      />
+                      <label class="form-check-label" for="female"
+                        >Female</label
+                      >
+                    </div>
+                    <div class="form-check form-check-inline">
+                      <input
+                        class="form-check-input"
+                        type="radio"
+                        name="gender"
+                        id="other"
+                        value="other"
+                      />
+                      <label class="form-check-label" for="other">Other</label>
+                    </div>
+                  </div>
+                </div>
+                <div class="mb-3">
+                  <label for="dob" class="form-label">Date of Birth</label>
+                  <input
+                    type="text"
+                    id="dob"
+                    class="form-control"
+                    value="**/10/19**"
+                    disabled
+                  />
+                  <small class="form-text-muted"
+                    >You have already done KYC. Changing your birthday is not
+                    permitted.</small
+                  >
+                </div>
+                <button type="submit" class="btn btn-save btn-primary">
+                  Save
+                </button>
+              </form>
+
+              <div class="profile-image">
+                <img
+                  src="https://via.placeholder.com/100"
+                  alt="Profile Image"
+                />
+                <br />
+                <button class="btn btn-secondary">Select Image</button>
+                <small class="form-text-muted d-block mt-2"
+                  >File size: maximum 1 MB</small
+                >
+                <small class="form-text-muted"
+                  >File extension: .JPEG, .PNG</small
+                >
+              </div>
             </div>
+          </div>
         </div>
+      </div>
     </div>
 
     <!-- Bootstrap JS -->
     <script>
-        // function toggleDropdown() {
-        //     var dropdown = document.querySelector('.dropdown-container');
-        //     dropdown.style.display = dropdown.style.display === 'block' ? 'none' : 'block';
-        // }
-        // document.getElementById('my-account').addEventListener('click', function () {
-        //     var submenu = document.querySelector('.submenu');
-        //     submenu.style.display = submenu.style.display === 'block' ? 'none' : 'block';
-        // });
+      // function toggleDropdown() {
+      //     var dropdown = document.querySelector('.dropdown-container');
+      //     dropdown.style.display = dropdown.style.display === 'block' ? 'none' : 'block';
+      // }
+      // document.getElementById('my-account').addEventListener('click', function () {
+      //     var submenu = document.querySelector('.submenu');
+      //     submenu.style.display = submenu.style.display === 'block' ? 'none' : 'block';
+      // });
     </script>
-</body>
-
+  </body>
 </html>
