--- a/revalida-shopping-app/src/app/modules/dashboard/pages/profile/profile.component.scss
+++ b/revalida-shopping-app/src/app/modules/dashboard/pages/profile/profile.component.scss
@@ -86,9 +86,9 @@ form {
   border: none;
 }
 
-.btn-save:hover {
-  background-color: #e64a19;
-}
+// .btn-save:hover {
+//   background-color: #e64a19;
+// }
 
 .profile-image {
   text-align: center;
