Added admin-dashbaord page, charts, and tables

--- a/revalida-shopping-app/src/app/shared/components/navbar/navbar.component.html
+++ b/revalida-shopping-app/src/app/shared/components/navbar/navbar.component.html
@@ -51,7 +51,7 @@
               data-bs-toggle="dropdown"
               aria-expanded="false"
             >
-              <img src="boy.png" alt="">
+              <img src="assets/img/boy.png" alt="">
             </button>
             <ul
               class="dropdown-menu dropdown-menu-end"
