--- a/revalida-shopping-app/src/app/modules/auth/pages/user-creds/user-creds.component.html
+++ b/revalida-shopping-app/src/app/modules/auth/pages/user-creds/user-creds.component.html
@@ -6,7 +6,7 @@
       <h3 class="text-center">User Credentials</h3>
       <form [formGroup]="userCredsForm">
         <div class="profile">
-          <img src="profile.png" alt="">
+          <img src="assets/img/profile.png" alt="">
         </div>
         <div class="mb-3">
           <label for="username" class="form-label">User Name</label>
