Updated admin page, added links, updated styles

--- a/revalida-shopping-app/src/app/modules/admin/pages/admin-dashboard/admin-dashboard.component.scss
+++ b/revalida-shopping-app/src/app/modules/admin/pages/admin-dashboard/admin-dashboard.component.scss
@@ -2,6 +2,10 @@ section {
   height: 100%;
 }
 
+.navbar-nav ul > li {
+    cursor: pointer;
+}
+
 #layoutAuthentication {
   display: flex;
   flex-direction: column;
