Added admin products page, and products table, updated admin-dboard

--- a/revalida-shopping-app/src/app/shared/components/admin-sidenav/admin-sidenav.component.html
+++ b/revalida-shopping-app/src/app/shared/components/admin-sidenav/admin-sidenav.component.html
@@ -3,12 +3,12 @@
     <div class="sb-sidenav-menu">
         <div class="nav">
             <div class="sb-sidenav-menu-heading">Core</div>
-            <a class="nav-link" href="index.html">
+            <a class="nav-link" routerLink="/admin">
                 <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                 Dashboard
             </a>
             <div class="sb-sidenav-menu-heading">Interface</div>
-            <a class="nav-link" href="#">
+            <a class="nav-link" routerLink="/admin/products">
                 <div class="sb-nav-link-icon"><i class="fa-solid fa-boxes-stacked"></i></div>
                 Products
             </a>
