--- a/revalida-shopping-app/src/app/shared/components/admin-sidenav/admin-sidenav.component.scss
+++ b/revalida-shopping-app/src/app/shared/components/admin-sidenav/admin-sidenav.component.scss
@@ -1,3 +1,10 @@
+.sb-sidenav {
+  padding-top: 56px;
+}
+.sb-sidenav .sb-sidenav-menu {
+  overflow-y: auto;
+}
+
 #layoutError {
   display: flex;
   flex-direction: column;
