--- a/revalida-shopping-app/src/styles.scss
+++ b/revalida-shopping-app/src/styles.scss
@@ -5,6 +5,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
 @import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
+// @import "~simple-datatables/dist/style.css";
+
 
 * {
     padding: 0;
