Experimenting with different datatable packages

--- a/revalida-shopping-app/src/app/modules/admin/pages/accounts/accounts.component.html
+++ b/revalida-shopping-app/src/app/modules/admin/pages/accounts/accounts.component.html
@@ -8,7 +8,7 @@
             <main>
                 <div id="myProductsTable" class="me-5">
                 </div>
-                <div id="productsTable" class="">
+                <div id="productsTable">
                     <table id="myTable" class="table table-striped">
                         <thead>
                           <tr>
