--- a/revalida-shopping-app/src/app/shared/components/admin-sidenav/admin-sidenav.component.html
+++ b/revalida-shopping-app/src/app/shared/components/admin-sidenav/admin-sidenav.component.html
@@ -9,6 +9,7 @@
             </a>
             <div class="sb-sidenav-menu-heading">Interface</div>
             <a class="nav-link" routerLink="/admin/products">
+            <!-- <a class="nav-link" (click)="redirectTo('/admin')"> -->
                 <div class="sb-nav-link-icon"><i class="fa-solid fa-boxes-stacked"></i></div>
                 Products
             </a>
@@ -17,6 +18,7 @@
                 Orders
             </a>
             <a class="nav-link" routerLink="/admin/accounts">
+            <!-- <a class="nav-link" (click)="redirectTo('/admin/accounts')"> -->
                 <div class="sb-nav-link-icon"><i class="fa-solid fa-user-gear"></i></div>
                 Admin
             </a>
