--- a/revalida-shopping-app/src/app/modules/admin/pages/products/products.component.scss
+++ b/revalida-shopping-app/src/app/modules/admin/pages/products/products.component.scss
@@ -141,10 +141,14 @@ main {
     width: 100%;
 }
 
-main #myProductsTable {
+main #productsTable {
     grid-area: productsTable;
-    // margin-right: 20px;
 }
+
+// main #myProductsTable {
+//     grid-area: productsTable;
+//     // margin-right: 20px;
+// }
 
 // Form Styles
 
@@ -214,4 +218,8 @@ main #myProductsTable {
 
 .item-qty-price div:first-child {
     margin-right: 20px;
+}
+
+.btn-img {
+    height: 10px;
 }
