--- a/revalida-shopping-app/src/app/modules/admin/pages/admin-dashboard/admin-dashboard.component.html
+++ b/revalida-shopping-app/src/app/modules/admin/pages/admin-dashboard/admin-dashboard.component.html
@@ -576,9 +576,5 @@
             </footer>
         </div>
     </div>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script> -->
-    <!-- <script src="js/scripts.js"></script>
-    <script src="assets/demo/chart-area-demo.js"></script>
-    <script src="assets/demo/chart-bar-demo.js"></script>
-    <script src="js/datatables-simple-demo.js"></script> -->
+    <app-footer></app-footer>
 </section>
